# chesspp

./: .gitignore  CMakeLists.txt  `
includes/: ai.hpp  board.hpp  transposition_table.hpp  user_interface.hpp  utils.hpp  zobrist.hpp
src/: board.cpp  enginet.cpp  main.cpp  perft.cpp  testEvaluation.cpp  transposition_table.cpp  user_interface.cpp  utils.cpp  zobrist.cpp
src/ai/: ai.cpp  evaluation.cpp  piece_table.cpp  quiesce.cpp  search.cpp
src/moves/: generator.cpp  king.cpp  knight.cpp  nonSlidingPieces.cpp  pawn.cpp  slidingPieces.cpp
